<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/dimen_8"
    android:layout_marginRight="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_4"
    app:cardElevation="@dimen/dimen_8"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintLeft_toLeftOf="@id/item_constraint"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            android:layout_margin="@dimen/dimen_8"
            android:padding="@dimen/dimen_8"
            android:background="@drawable/ic_ellipse"
            android:src="@drawable/ic_income"
            android:contentDescription="@string/item_image"
            />

        <TextView
            android:id="@+id/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_12"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_8"
            android:text="@string/item_text"
            android:fontFamily="@font/rubik"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintLeft_toRightOf="@id/item_icon"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            app:layout_constraintVertical_bias="0.163"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            android:background="@drawable/ic_rectangle"
            android:paddingTop="@dimen/dimen_2"
            android:paddingLeft="@dimen/dimen_4"
            android:paddingRight="@dimen/dimen_4"
            android:text="@string/item_category"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/rubik"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintLeft_toRightOf="@id/item_icon"
            app:layout_constraintRight_toRightOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_14"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_20"
            android:text="@string/item_amount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintRight_toRightOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/item_date"
            android:textSize="10sp"
            android:textColor="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/item_constraint"
            app:layout_constraintEnd_toEndOf="@id/item_constraint"
            app:layout_constraintTop_toTopOf="@id/item_constraint"
            app:layout_constraintVertical_bias="0.859"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>